--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -17,7 +17,7 @@ server {
   location /index.php {
       try_files $uri = 404;
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
-      fastcgi_pass app-sohoabaigiang:9000;
+      fastcgi_pass app-sample:9000;
       fastcgi_read_timeout 300;
       fastcgi_index index.php;
       include fastcgi_params;
